# cryptochat2

./: CMakeLists.txt  README.md  compile_note.txt  depends.txt  lnx_build.sh  make_release.sh  release_readme.txt
img/: recv Error 4 Interrupted.txt
include/: AESa.cpp  AESa.h  Buffer.hpp  DES.cpp  DES.h  IDEA.hpp  Menu.h  SHA256.h  argparse.hpp  base_const.hpp  c_plus_plus_serializer.h  cfg_cli.hpp  cfg_crypto.hpp  cfg_srv.hpp  challenge.hpp  chat_cli.hpp  chat_srv.hpp  client_term.hpp  crypto_cfg.hpp  crypto_client.hpp  crypto_const.hpp  crypto_dbmgr.hpp  crypto_ecckey.hpp  crypto_file.hpp  crypto_history.hpp  crypto_key_parser.hpp  crypto_keymgr.hpp  crypto_parsing.hpp  crypto_png.hpp  crypto_server.hpp  crypto_server1.hpp  crypto_shuffle.hpp  crypto_strutil.hpp  crypto_urlkey.hpp  cryptodata_list.hpp  data.hpp  decryptor.hpp  ecc_util.hpp  encdec_algo.hpp  encrypt.h  (+20 more)
include/msgio/: proto_client.h  proto_server.h  proto_utils.h  writecb_infinite_loop.txt
include/qa/: .gitignore  BigInteger.cpp  BigInteger.h  SystemProperties.cpp  SystemProperties.hpp  atomic_bitvector.hpp  mathcommon.h  matrix.cpp  matrix.hpp  prime.h  qa.cpp  qa_internal_empty.hpp  rational.cpp  rational.h  rsa_gen.cpp  rsa_gen.hpp  tonelli_shanks.cpp
include/qa/Bin2PNG/: lodepng.cpp
include/qa/ExternalLib/: .gitignore
include/qa/RSA-GMP/: RSAGMP.cpp  RSAGMP.h  RSAGMPPrime.cpp  RSAGMPPrime.h  RSAGMPTest.cpp  RSAGMPTest.h  RSAGMPUtils.cpp  RSAGMPUtils.h  RSAGMPmainTest.cpp
include/qa/SimpleECC/src/: boolean.hpp  ecc.cpp  ecc.hpp  helper.cpp  helper.hpp  j_point.cpp  j_point.hpp  point.cpp  point.hpp  simple_ecc_test.cpp  test_simple_ecc.hpp
include/qa/aes-whitebox/: .gitignore  Makefile  aes.cc  aes_private.h  aes_whitebox.h  aes_whitebox.hpp  aes_whitebox_base.hpp  aes_whitebox_compiler.hpp
include/qa/ec_gmp/: ec_gmp_p_mul.hpp
include/qa/ecc_point/: ecc_curve.cpp  ecc_curve.hpp  ecc_elgamal.cpp  teste_funcoes.c
include/qa/ecgen/src/: ecgen.c
include/qa/menu/: cfg_menu.cpp  eccdomain_menu.cpp  ecckey_menu.cpp  hh_menu.cpp  menu.cpp  menu.h  menu_io.cpp  menu_io.h  puzzle_menu.cpp  rsa_menu.cpp  rsa_menu.h  tools_menu.cpp  wbaes_menu.cpp
ipc/: build.sh  clean.sh
ipc/examples/cpp/linux/: main  main.cpp
ipc/examples/linux/: main
ipc/src/: connection.c
lnx_chatcli/: .gitignore  CMakeLists.txt  lnx_chatcli.cbp  lnx_chatcli.depend  lnx_chatcli.layout
lnx_chatsrv/: .gitignore  CMakeLists.txt  lnx_chatsrv.cbp  lnx_chatsrv.depend  lnx_chatsrv.layout
mediaviewer/: CMakeLists.txt  linux_install.txt  todo.txt  win_install.txt
mediaviewer/cmake/: FindOpenCV.cmake  config.cmake.in  version.cmake
mediaviewer/prj/: LearnTool.ini  LearnTool_AL.ini  LearnTool_Sam.ini  lnxprj.cbp  lnxprj.layout  prj.sln  prj.vcxproj  prj.vcxproj.filters
mediaviewer/res/: plant.txt  plant_medical.txt  quiz001.xml  root.txt
mediaviewer/res/topic/: .gitignore
mediaviewer/res/topic/Dandelion (flower, leave, root)/: desc.ini
mediaviewer/res/topic/chufa (leave_stem, oil, root)/: desc.ini
mediaviewer/res/topic/trap/: desc.ini
mediaviewer/src/: Config.hpp  FolderNavigation.cpp  FolderNavigation.h  Quiz.cpp  Quiz.h  UIMain.cpp  UIMain.h  UIState.cpp  UIState.h  VideoCapture.cpp  VideoCapture.hpp  main.cpp
mediaviewer/src/SFML_SDK/: Game.cpp  Game.h
mediaviewer/src/SFML_SDK/GUI/: Button.cpp  Button.h  GuiQuiz.cpp  GuiQuiz.h  Minimap.cpp  Minimap.h  ProgressBar.cpp  ProgressBar.h  StackMenu.cpp  StackMenu.h  Textbox.cpp  Textbox.h  Widget.cpp  Widget.h
mediaviewer/src/SFML_SDK/ResourceManager/: ResourceHolder.cpp  ResourceHolder.h  ResourceManager.h
mediaviewer/src/SFML_SDK/States/: StateBase.h  StatePlaying.cpp  StatePlaying.h
mediaviewer/src/SFML_SDK/Util/: Animation.cpp
mediaviewer/src/core/: config.h  config.h.in
mediaviewer/src/filesystem/: path.h
mediaviewer/src/tinyfiledialogs/: tinyfiledialogs.c
mediaviewer/src/version/: version.h  version.h.in
release/linux/v0_0_1/cryptochatv0_0_1/Latest/: lnx_chatsrv  mediaviewer
src/: .gitignore  Base64.cpp  SHA256.cpp  chat_client_main.cpp  chat_server_main.cpp  client_term.cpp  crc32a.cpp  crypto_client.cpp  crypto_client_encdec.cpp  crypto_file.cpp  crypto_keymgr.cpp  crypto_server.cpp  crypto_server1.cpp  encdec_algo.cpp  encrypt.cpp  includes.cpp  machineid.cpp  menu_window.cpp  nc_terminal.cpp  netw_msg.cpp  socket_node.cpp  srv_test.cpp  twofish.c  vigenere.cpp
src/msgio/: proto_client.cpp  proto_server.cpp  proto_utils.cpp
subprocess/: subprocess.h
